<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_label">codecentric Timer</string>
    <string name="app_name">codecentric Timer</string>

    <!-- menu -->
    <string name="menu_preferences_title">Preferences</string>
    <string name="menu_manage_favorites_title">Favorites</string>
    <string name="menu_save_as_favorite_title">Save as Favorite</string>
    
    <!-- startup -->
    <string name="startup_message">Starting…</string>

    <!-- set timer views -->
    <string name="set_timer_label_hours">HH</string>
    <string name="set_timer_label_minutes">MM</string>
    <string name="set_timer_label_seconds">SS</string>
    <string name="set_timer_button_plus">+</string>
    <string name="set_timer_button_minus">-</string>
    <string name="set_timer_button_start">Start</string>
    <string name="set_timer_button_close">Close</string>
    <string name="set_timer_button_reset">00</string>

    <!-- show countdown view -->
    <string name="show_countdown_title">Counting Down</string>
    <string name="show_countdown_double_zero">00</string>
    <string name="show_countdown_colon">:</string>
    <string name="show_countdown_button_pause">Pause</string>
    <string name="show_countdown_button_continue">Continue</string>
    <string name="show_countdown_button_cancel">Cancel</string>
    <string name="show_countdown_paused">PAUSED</string>

    <!-- show alarm view -->
    <string name="show_alarm_title">Time\'s up</string>
    <string name="show_alarm_times">Time\'s</string>
    <string name="show_alarm_up">up!</string>
    <string name="show_alarm_stop_alarm">Stop Alarm</string>
    
    <string name="notification_alarm_ticker_text">Time\'s up</string>
	<string name="notification_alarm_title">Time\'s up</string>
	<string name="notification_alarm_text">The countdown timer has reached zero.</string>

    <!-- preferences activity -->
    <string name="preferences_title">Preferences</string>
    <string name="title_use_hours">Display hours</string>
    <string name="summary_use_hours">Provide an input for hours when setting the timer</string>
    <string name="title_use_minutes">Display minutes</string>
    <string name="summary_use_minutes">Provide an input for minutes when setting the timer</string>
    <string name="title_use_seconds">Display seconds</string>
    <string name="summary_use_seconds">Provide an input for seconds when setting the timer</string>
    <string name="title_set_timer_method">How to set the timer…</string>
    <string name="dialog_title_set_timer_method">How to set the timer</string>
    <string name="summary_set_timer_method">Type of input control for setting the timer</string>
    <string name="title_wheel_direction">Wheel direction…</string>
    <string name="dialog_title_wheel_direction">Wheel direction</string>
    <string name="summary_wheel_direction">Default: Roll up to increase, down to decrease - Reverted: vice versa</string>
    <string name="title_keep_display_on">Don\'t turn off display</string>
    <string name="summary_keep_display_on">Prevents display from turning off during countdown.</string>
    <string name="title_tap_anywhere_to_pause">Tap anywhere to pause</string>
    <string name="summary_tap_anywhere_to_pause">Tap anywhere on the display to pause or continue</string>
    <string name="dialog_title_show_countdown_options">Show countdown as</string>
    <string name="summary_show_countdown_options">How to visualize the countdown</string>
    <string name="title_show_countdown_options">Show countdown as…</string>
    <string name="summary_alarm_duration">How long the alarm will ring until it stops automatically (in seconds)</string>
    <string name="title_alarm_duration">Alarm duration</string>
    
    <!-- manage timers activity -->
    <string name="manage_timers_title">Manage Timers</string>
    <string name="manage_timers_context_menu_delete_label">Delete</string>
    <string name="manage_timers_context_menu_rename_label">Rename</string>
    
    <!-- save timer activity -->
    <string name="save_timer_title">Save Timer</string>
    <string name="save_timer_label_name">Name: </string>
    <string name="save_timer_label_time">Time: </string>
    <string name="save_timer_button_save">Save</string>
    <string name="save_timer_button_cancel">Cancel</string>
    
</resources>