<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/cc_logo_background"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewAlarmTimes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/show_alarm_times"
        android:textSize="50dp" />

    <TextView
        android:id="@+id/textViewAlarmUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="70dp"
        android:text="@string/show_alarm_up"
        android:textSize="50dp" />

    <Button
        android:id="@+id/buttonStopAlarm"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/show_alarm_stop_alarm" 
        android:textSize="30dp"
        />

</LinearLayout>