<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/showCountdownActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/cc_logo_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="70dp" >

        <de.codecentric.android.timer.view.PieChartView
            android:id="@+id/pieChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textViewHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_countdown_double_zero"
                android:textSize="70dp" />

            <TextView
                android:id="@+id/textViewColon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_countdown_colon"
                android:textSize="70dp" />

            <TextView
                android:id="@+id/textViewMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_countdown_double_zero"
                android:textSize="70dp" />

            <TextView
                android:id="@+id/textViewColon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_countdown_colon"
                android:textSize="70dp" />

            <TextView
                android:id="@+id/textViewSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_countdown_double_zero"
                android:textSize="70dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewPaused"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_countdown_paused"
            android:textSize="35dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/buttonPauseContinueStopAlarm"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/show_countdown_button_pause" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/show_countdown_button_cancel" />
    </LinearLayout>

</RelativeLayout>